@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2007/08/22 15:16:37 smb Exp $
+lib/X11/fonts/TTF/Inconsolata.otf
